5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1675_2473.log
== TEST (2019-04-30 11:23:40) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:29:46) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
print(22+d+e)
-- OUTPUT:
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:38:33) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
print(22+d+e)

-- OUTPUT:
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:41:18) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
print(22+d+e)
print(d)
print(e)
-- OUTPUT:
26
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:42) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
if (ano>=1900)and(ano<=2099)
	print(abs(31-f))
-- ERROR:
File "XXXX", line 8
    if (ano>=1900)and(ano<=2099)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:48) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
if (ano>=1900)and(ano<=2099):
	print(abs(31-f))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:20) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)


if (ano>=1900)and(ano<=2099):
	print(g)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:09:03) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)


if (ano>=1900)and(ano<=2099):
	print(g)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:12:39) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(22+f)

if (ano>=1900)and(ano<=2099):
	print(g)
	print(h)
-- OUTPUT:
5
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:13:03) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(22+g)

if (ano>=1900)and(ano<=2099):
	print(g)
	print(h)
-- OUTPUT:
5
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:14:02) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)

if (ano>=1900)and(ano<=2099):
	print(g)
	print(h)
-- OUTPUT:
5
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:14:54) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)

if (ano>=1900)and(ano<=2099):
	print(g)
	print(h)
-- OUTPUT:
5
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:23:08) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)

if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		print("ano invalido")
	elif f>31:
		print(g,"-",4,ano)
	elif f<=31:
		print(h,"-",3,ano)
-- OUTPUT:
26 - 3 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:23:35) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)

if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		print("ano invalido")
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:23:45) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)

if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		print("ano invalido")
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:24:00) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)

if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		print("ano invalido")
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:36:10) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)

if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g,"-",4,"-",ano)
		elif f<=31:
			print(h,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:37:34) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
h=abs(f)
print(g)
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g,"-",4,"-",ano)
		elif f<=31:
			print(h,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
5
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:42:07) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-(f+7))
g1=abs(g)
h=abs(f)
h1=h+7
print(g)
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
2
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:42:09) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-(f+7))
g1=abs(g)
h=abs(f)
h1=h+7
print(g)
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.143861
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
2
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
33
33 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:42:11) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-(f+7))
g1=abs(g)
h=abs(f)
h1=h+7
print(g)
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.12735
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
2
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
33
33 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:42:12) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-(f+7))
g1=abs(g)
h=abs(f)
h1=h+7
print(g)
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
2
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:42:22) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-(f+7))
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:43:57) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f+7)
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:44:11) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f+7)
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:44:33) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f+7)
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.23057
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:44:34) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f+7)
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.212302
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:44:35) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f+7)
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:44:55) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f+7)
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
elif f>31:
	print(g,"-",4,"-",ano)
elif f<=31:
	print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:46:03) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f+7)
g1=abs(g)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:47:39) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:48:01) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:48:41) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:50) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.130572
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:54) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.12657
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:56) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.178203
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:57) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.154217
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:48:59) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:49:24) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:49:51) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.146356
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:49:54) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.189673
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:49:54) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:50:29) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:50:31) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.154728
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:50:32) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.139419
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:50:32) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:51:18) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.162431
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:51:20) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:00) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:25) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:45) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:59) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:21) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:31) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:05) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>1900)and(ano<2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:54:06) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>1900)and(ano<2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.172376
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:54:07) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>1900)and(ano<2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.149487
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:54:08) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>1900)and(ano<2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- EXECUTION TIME:
0.164724
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:09) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>1900)and(ano<2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:37) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:55:09) 
-- CODE:
ano= int(input("insira o ano: "))
a=ano%19
b=ano%4
c=ano%7
d=((19*a)+24)%30
e=(2*b+4*c+6*d+5)%7
f=(22+d+e)
g=abs(31-f)
g1=abs(31-f+7)
h=abs(f)
h1=h+7
if (ano>=1900)and(ano<=2099):
	if (ano==1954)or(ano==1981)or(ano==2049)or(ano==2076):
		if f>31:
			print(g1,"-",4,"-",ano)
		elif f<=31:
			print(h1,"-",3,"-",ano)
	elif f>31:
		print(g,"-",4,"-",ano)
	elif f<=31:
		print(h,"-",3,"-",ano)
else:
	print("ano invalido")
-- EXECUTION TIME:
0.175966
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
